# DSC_best_practice_demo

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: environment_setup.md
src/example_package/: __init__.py  example_module.py
