# Project definition:

[project]
name = "TODO"
dynamic = [ "version" ]
description = "TODO"
license = { file = "LICENSE" }
requires-python = ">=3.6"
authors = [
    { name = "TODO", email = "TODO@ons.gov.uk" },
]

[project.urls]
repository = "https://github.com/TODO"

# Tools definition:

### Poetry:
[tool.poetry]
package-mode = false # set to true if project should be pip-installable
version = "0.0.1"  

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pre-commit = ">=4.2.0"
mkdocs-material = "^9.6.9"
pytest-cov = "^6.0.0"
black = "^25.1.0"
ruff = "^0.11.0"
pylint = "^3.3.5"
mypy = "^1.15.0"
isort = "^6.0.1"
bandit = "^1.8.3"
pytest = "^8.3.5"
mkdocs = "^1.6.1"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.7"
